initial commit complete till index page TODO: 1) index page -> fr mobile -> font outile then overlayy then font filled.

--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,7 @@ typings/
 .npm
 
 # Optional eslint cache
-.eslintcache
+.eslintcachehttps://github.com/dhruvaj-patil/portfolio_website.git
 
 # Microbundle cache
 .rpt2_cache/
@@ -102,3 +102,7 @@ dist
 
 # TernJS port file
 .tern-port
+public/
+package-lock.json
+yarn.lock
+settings.json
