--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-typing-effect": "^2.0.3",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-twin-peaks": "^0.16.19"
