--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.0",
     "gatsby-plugin-typography": "^2.5.10",
+    "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-sharp": "^2.5.0",
     "node-sass": "^4.14.1",
@@ -23,7 +24,8 @@
     "react-multi-carousel": "^2.5.5",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
-    "typography-theme-twin-peaks": "^0.16.19"
+    "typography-theme-twin-peaks": "^0.16.19",
+    "use-query-params": "^1.1.6"
   },
   "devDependencies": {
     "prettier": "2.0.5"
